<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".RegisterActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="61dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:fontFamily="@font/kaushan_script"
        android:text="@string/note_taker"
        android:textColor="@android:color/white"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.113" />

    <TextView
        android:id="@+id/where_best_"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="72dp"
        android:gravity="end|bottom"
        android:text="@string/where_best_"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/Email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.137" />

    <EditText
        android:id="@+id/et_Name_Of_User"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@android:color/white"
        android:fontFamily="@font/lato"
        android:gravity="top"
        android:hint="Name"
        android:textColor="#F9F9F9"
        android:textColorHint="#ABA8A5"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@android:color/white"
        android:fontFamily="@font/lato"
        android:gravity="top"
        android:hint="@string/email"
        android:textColor="#F9F9F9"
        android:textColorHint="#ABA8A5"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/et_Name_Of_User"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@android:color/white"
        android:fontFamily="@font/lato"
        android:gravity="top"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#F9F9F9"
        android:textColorHint="#ABA8A5"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/confrimPass"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:backgroundTint="@android:color/white"
        android:fontFamily="@font/lato"
        android:gravity="top"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColor="#F9F9F9"
        android:textColorHint="#ABA8A5"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.579" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="355dp"
        android:layout_height="45dp"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:textStyle="bold"
        android:minWidth="90dp"
        android:minHeight="8dp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.706" />

    <TextView
        android:id="@+id/tvSignInText"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:alpha="0.5"
        android:fontFamily="@font/lato"
        android:gravity="top"
        android:lineSpacingExtra="5sp"
        android:text="@string/already_have_an_account"
        android:textColor="#FFFBFB"
        android:translationY="-2.6sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.361"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister"
        app:layout_constraintVertical_bias="0.078" />

    <Button
        android:id="@+id/btn_SignIn"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:background="@android:color/primary_text_dark"
        android:fontFamily="@font/lato"
        android:gravity="top"
        android:lineSpacingExtra="5sp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        android:translationY="-2.6sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toEndOf="@+id/tvSignInText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.762" />


</androidx.constraintlayout.widget.ConstraintLayout>

