<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".UserAccountActivity">

    <TextView
        android:id="@+id/tv_Welcome_Message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@android:color/white"
        android:fontFamily="@font/kaushan_script"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.139" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:background="@drawable/bg_logout_cancel_button"
        android:fontFamily="@font/montserrat"
        android:text="@string/logout"
        android:textColor="@android:color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnUpdate_Email"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/btnUpdate_Email"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.623" />

    <Button
        android:id="@+id/btnUpdate_Password"
        android:layout_width="154dp"
        android:layout_height="46dp"
        android:background="@drawable/bg_update_email_pass_button"
        android:elevation="40dp"
        android:padding="5dp"
        android:fontFamily="@font/lato"
        android:text="@string/update_password"
        android:textAllCaps="false"
        android:textColor="#4F4B4B"
        android:textStyle="bold"
        android:textSize="14sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_Welcome_Message"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/tv_Welcome_Message"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.344" />

    <Button
        android:id="@+id/btnUpdate_Email"
        android:layout_width="154dp"
        android:layout_height="46dp"
        android:background="@drawable/bg_update_email_pass_button"
        android:padding="5dp"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:text="@string/update_email"
        android:textColor="#4F4B4B"
        android:fontFamily="@font/lato"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnUpdate_Password"
        app:layout_constraintStart_toStartOf="@+id/btnUpdate_Password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.461" />
</androidx.constraintlayout.widget.ConstraintLayout>