<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:padding="20dp"
    tools:context=".UpdateEmail">


    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#4A00E0"
        android:fontFamily="@font/khula_extrabold"
        android:gravity="right"
        android:text="@string/update_email"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.146" />


    <TextView
        android:id="@+id/where_best_"
        android:layout_width="209dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="4dp"
        android:background="#4A00E0"
        android:gravity="start"
        android:text="@string/set_an_email_that_can_help_you_stay_connected_to_us_always"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/oldEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/oldEmail"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="284dp"
        android:backgroundTint="@android:color/white"
        android:fontFamily="@font/lato"
        android:hint="@string/old_email"
        android:inputType="textEmailAddress"
        android:textColor="#F9F9F9"
        android:textColorHint="#ABA8A5"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/newEmail"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@android:color/white"
        android:fontFamily="@font/lato"
        android:hint="@string/new_email_address"
        android:inputType="textEmailAddress"
        android:textColor="#F9F9F9"
        android:textColorHint="#ABA8A5"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oldEmail"
        app:layout_constraintVertical_bias="0.007" />

    <Button
        android:id="@+id/btnUpdate_Email"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/montserrat"
        android:minWidth="90dp"
        android:minHeight="8dp"
        android:padding="5dp"
        android:text="@string/update_email"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newEmail"
        app:layout_constraintVertical_bias="0.072" />

    <Button
        android:id="@+id/btnCancelinMail"
        android:layout_width="160dp"
        android:layout_height="45dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/bg_logout_cancel_button"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:minWidth="90dp"
        android:minHeight="8dp"
        android:padding="5dp"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.718" />


</androidx.constraintlayout.widget.ConstraintLayout>